--- a/MatlabFileIO.csproj
+++ b/MatlabFileIO.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>MatlabFileIO</RootNamespace>
     <AssemblyName>MatlabFileIO</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <UseMSBuildEngine>False</UseMSBuildEngine>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
