Change target framework to .NET 4

--- a/MatlabFileIO.csproj
+++ b/MatlabFileIO.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>MatlabFileIO</RootNamespace>
     <AssemblyName>MatlabFileIO</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
