--- a/MatlabFileIO.csproj
+++ b/MatlabFileIO.csproj
@@ -11,8 +11,7 @@
     <RootNamespace>MatlabFileIO</RootNamespace>
     <AssemblyName>MatlabFileIO</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
